# HuSIC

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  huc.cmake
src/hmckc/src/: datamake.c  mckc.h
src/husic/: freq_table.c  hus.s  husic.s  title.h  xpcmdrv.s  xpcmdrv_test.s
